P4PADEV-1658 code review and class refactor